# tc

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  release.yaml
docs/: README-de-DE.md  README-ja-JP.md  README-ko-KR.md  README-zh-CN.md  README-zh-TW.md
locales/: app.yml
src/: cmd.rs  counts.rs  input_processor.rs  lib.rs  locales.rs  main.rs
tests/: tc_tests.rs
