[package]
name = "tc"
version = "0.1.2"
edition = "2021"
description = "A simple and efficient token count program."
authors = ["guza <guza@duck.com>"]
repository = "https://github.com/guuzaa/tc"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
rust-i18n = "3.1.2"
sys-locale = "0.3.1"
tiktoken-rs = "0.5.9"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0.0"
tempfile = "3.12.0"